<?xml version="1.0" encoding="utf-8"?>
    <resources>

        <string name="app_name">SQLAuthentificator</string>
        <string name="u_email">E-mail:</string>
        <string name="u_pass">Password:</string>
        <string name="info_email">Please input your E-mail</string>
        <string name="info_upass">Please input your password</string>
        <string name="action_settings">Settings</string>
        <string name="login">Log In</string>
        <string name="regUser">Registration</string>
        <string name="regPage">Registration page</string>
        <string name="register">Register a new User</string>
        <string name="loged_msg">You are logged in successefuly!</string>
        <string name="title_activity_register_user">RegisterUserActivity</string>
    <string name="emptyString" />


</resources>

