<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context="com.example.kravets.sqlauthentificator.MainActivity">




<LinearLayout
    android:id="@+id/lblsLayout"
    android:layout_width="96dp"
    android:layout_height="256dp"
    android:gravity="left|top"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_gravity="right|bottom"
        android:gravity="center|right"
        android:height="24dp"
        android:text="@string/u_email"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:layout_gravity="right|bottom"
        android:gravity="center|right"
        android:height="24dp"
        android:text="@string/u_pass"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="16sp" />

</LinearLayout>

<LinearLayout
    android:id="@+id/tFieldsLayout"
    android:layout_width="fill_parent"
    android:layout_height="120dp"
    android:layout_toRightOf="@+id/lblsLayout"
    android:gravity="right|top"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/TFUserName"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:inputType="textEmailAddress"
        android:hint="@string/info_email"
        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material">

    </EditText>

    <EditText
        android:id="@+id/TFPassword"
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:inputType="textPassword"
        android:hint="@string/info_upass"
        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material">

        <requestFocus />
    </EditText>

</LinearLayout>

<Button
    android:id="@+id/logInBtn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginRight="16dp"
    android:text="@string/login"
    android:layout_marginStart="54dp"
    android:layout_below="@+id/tFieldsLayout"
    android:layout_alignParentStart="true"
    android:onClick="onButtonClick" />

    <Button
        android:id="@+id/regBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:text="@string/regUser"
        android:layout_below="@+id/tFieldsLayout"
        android:layout_alignEnd="@+id/tFieldsLayout" />



</RelativeLayout>
